Einde opgave 4.